# Agrodash

./: Dockerfile.api  Dockerfile.web  README.md  api_explorer.html  package-lock.json  package.json  svelte.config.js
.github/workflows/: deploy.yml
migrations/: 003_sensor_stats.sql
src/lib/: api.ts  crypto.ts  theme.css  utils.ts
src/lib/components/: BoxCard.svelte  BoxSelector.svelte  CsvDownloadMenu.svelte  DateTimePicker.svelte  HelpPanel.svelte  MultiSensorChart.svelte  SensorChart.svelte  SensorSelect.svelte  Topbar.svelte  TypeSelector.svelte
src/lib/stores/: downloading.ts  preferences.ts
src/linux/: agrodash-api.service
src/routes/: +layout.svelte  +page.svelte
src/rust/: Cargo.toml
src/rust/.sqlx/: query-08feb8279f41d4f4f3800cb04278d1f58dc5127f508f68733d2f124a22839f4d.json  query-187587ed68fcb7a932463479ec51c6a0991983405ce6488faa6e1184556e94d8.json  query-3b0e04b2d786784f323c40bcd52abd596a41d7192a20add5b424f2dfc2d0517f.json  query-85e0c930096d3dfeee86acd47d128e634a180a01b93da3be1c7709ddccbf29f0.json  query-b07243fa5e290ecc1be1c8f5d5ea8ae9d18ded2d14fbc92282f48d099d1a5127.json  query-c53762572192c6ad69bfd6490dfe945ab7daa7809b2f30353978203d0e20b081.json  query-eb8119463f39d2e98aebe60489679fd764b4f631e2885c282202b25b3c81322f.json  query-fa45a7775e141714d11010dd496fcfe969034e8c632f3d9a1de66c2b6a19521a.json
src/rust/src/: auth.rs  crypto.rs  main.rs  models.rs  script_engine.rs
src/rust/src/routes/: auth.rs  boxes.rs  experiments.rs  invites.rs  mod.rs  oauth.rs  readings.rs  seed.rs  stats.rs
src/rust/src/tasks/: mod.rs  stats_worker.rs
