[package]
name    = "agrodash-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum       = { version = "0.7", features = ["macros", "multipart"] }
tokio      = { version = "1",   features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid   = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Auth
bcrypt       = "0.15"
jsonwebtoken = "9"

# CSV parsing
csv = "1"

# Scripting engine — sandboxed by default, no filesystem/network access
rhai = { version = "1", features = ["sync"] }

# Config / env
dotenvy = "0.15"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }